; ModuleID = '/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_utils.c_put_qword.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/tools/widl/extr_utils.c_put_qword.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@byte_swapped = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @put_qword(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i64, i64* @byte_swapped, align 8
  %4 = icmp ne i64 %3, 0
  br i1 %4, label %5, label %9

5:                                                ; preds = %1
  %6 = call i32 @put_dword(i32 0)
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @put_dword(i32 %7)
  br label %13

9:                                                ; preds = %1
  %10 = load i32, i32* %2, align 4
  %11 = call i32 @put_dword(i32 %10)
  %12 = call i32 @put_dword(i32 0)
  br label %13

13:                                               ; preds = %9, %5
  ret void
}

declare dso_local i32 @put_dword(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
